fixed css visiblity issue

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -18,6 +18,7 @@
 
 .fav {
   background: transparent;
+  color: goldenrod;
   border: none;
   cursor: pointer;
   font-size: 1.3em;
